--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="RIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RIconPng" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RIconPng" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RIconPng.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
